--- a/github/modules/SearchOptions/view/SearchOptionsViewController.xib
+++ b/github/modules/SearchOptions/view/SearchOptionsViewController.xib
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14868" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14824"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -26,15 +24,15 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <searchBar contentMode="redraw" searchBarStyle="minimal" placeholder="enter a keyword..." translatesAutoresizingMaskIntoConstraints="NO" id="Vl9-DX-TkO" customClass="KeywordSearchBar" customModule="github" customModuleProvider="target">
-                    <rect key="frame" x="8" y="28" width="359" height="56"/>
+                    <rect key="frame" x="8" y="8" width="359" height="56"/>
                     <color key="tintColor" name="main"/>
                     <textInputTraits key="textInputTraits"/>
                 </searchBar>
                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="VJX-Z1-eiX">
-                    <rect key="frame" x="16" y="92" width="343" height="92"/>
+                    <rect key="frame" x="16" y="72" width="343" height="95"/>
                     <subviews>
                         <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="Doj-uq-MAI">
-                            <rect key="frame" x="0.0" y="0.0" width="343" height="29"/>
+                            <rect key="frame" x="0.0" y="0.0" width="343" height="32"/>
                             <segments>
                                 <segment title="Repository"/>
                                 <segment title="User"/>
@@ -42,7 +40,7 @@
                             <color key="tintColor" name="main"/>
                         </segmentedControl>
                         <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="QCE-WP-Yoe">
-                            <rect key="frame" x="0.0" y="36" width="343" height="56"/>
+                            <rect key="frame" x="0.0" y="39" width="343" height="56"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" text="Language" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gqr-0k-t1M">
                                     <rect key="frame" x="0.0" y="18" width="76" height="20.5"/>
@@ -51,8 +49,7 @@
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="JLJ-rZ-NUc" customClass="LanguageTextField" customModule="github" customModuleProvider="target">
-                                    <rect key="frame" x="84" y="13" width="259" height="30"/>
-                                    <nil key="textColor"/>
+                                    <rect key="frame" x="84" y="11" width="259" height="34"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                     <textInputTraits key="textInputTraits"/>
                                 </textField>
@@ -64,7 +61,7 @@
                     </subviews>
                 </stackView>
             </subviews>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
             <constraints>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="VJX-Z1-eiX" secondAttribute="trailing" constant="16" id="6M9-Z7-iNr"/>
                 <constraint firstItem="VJX-Z1-eiX" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="16" id="Hng-8A-wux"/>
@@ -75,6 +72,7 @@
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="Vl9-DX-TkO" secondAttribute="trailing" constant="8" id="w8q-Cd-PIZ"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
+            <point key="canvasLocation" x="140" y="153"/>
         </view>
     </objects>
     <resources>
